<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadEscolaActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:srcCompat="@mipmap/escola" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/borda_botao"
        android:ems="10"
        android:hint="@string/nomeSchool"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/borda_botao"
        android:ems="10"
        android:hint="@string/bairroSchool"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_selector"
        android:text="@string/buttonCadastrar"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.094" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:srcCompat="@mipmap/usuario" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toTopOf="@+id/editTextText2"
        app:srcCompat="@mipmap/usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>